# WhosInBot-Rust

./: .dockerignore  .env.template  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml  main.template.toml  test.toml
migrations/2019-03-08-174058_create_roll_calls/: up.sql
migrations/2019-03-08-174102_create_roll_call_responses/: up.sql
src/: lib.rs  main.rs  schema.rs  settings.rs
src/db/: helpers.rs  migration.rs  mod.rs  repo.rs
src/models/: mod.rs  type_aliases.rs
src/models/roll_call_responses/: attendance.rs  mod.rs
src/models/roll_calls/: mod.rs  status.rs
src/telegram/: base_bot.rs  commands.rs  mod.rs  views.rs  whosin.rs
src/util/: collections.rs  mod.rs  result.rs  testutil.rs
