[package]
name = "whosinbot"
version = "0.1.0"
authors = ["tony <lpthanh@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.6"
r2d2 = "0.8.3"
serde_derive = "1.0.89"
serde_json = "1.0.39"
rust-crypto = "0.2.36"
itertools = "0.8.0"
telegram-bot = "0.6.1"
futures = "0.1.25"
tokio-core = "0.1.17"
regex = "1.1.2"
lazy_static = "1.3.0"
failure = "0.1.5"
slog = "2.4.1"
slog-scope = "4.1.1"
slog-term = "2.4.0"
slog-json = "2.3.0"
slog-async = "2.3.0"
sentry = "0.15.1"
maplit = "1.0.1"
config = "0.9.2"
serde = "1.0.89"
diesel_migrations = "1.4.0"

[dev-dependencies]
mockers = "0.13.1"
mockers_derive = "0.13.1"
